feat(native): add GraalVM native-image metadata for native modules
- resource-config.json: include native/** native libraries and META-INF/services SPI
- jni-config.json: register NativeVideoCodec JNI methods (video-codec)
- native-image.properties: recommended build args
- FFM modules (shm-queue/shm-queue-http committed separately with module)